sassi-macros/tests/lihaaf/compile_fail/cacheable_missing_id_field.rs
//! `#[derive(Cacheable)]` requires a field literally named `id`.

use sassi::Cacheable;

#[derive(Cacheable)]
struct NoIdHere {
    name: String,
    age: u32,
}

fn main() {}
